--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yunfeng2003/my-npm-project.git"
+  },
+    "contributors": [
+    "Yunfeng Wang (https://github.com/yunfeng2003)"
+  ],
   "keywords": [],
-  "author": "",
+  "author": "yunfeng2003",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2"
